Automatically backed up by Learn

--- a/my_list.html
+++ b/my_list.html
@@ -1,5 +1,5 @@
-"Gucci"
-"Fendi"
-"Prada"
-"Chanel"
-"Burberry"
+<li>"Gucci"</li>
+<li>"Fendi"</li>
+<li>"Prada"</li>
+<li>"Chanel"</li>
+<li>"Burberry"</li>
