Automatically backed up by Learn

--- a/my_list.html
+++ b/my_list.html
@@ -1,7 +1,8 @@
-<ol>
+<p>Some of my favorite designers!</p>
+<ul>
   <li>"Gucci"</li>
   <li>"Fendi"</li>
   <li>"Prada"</li>
   <li>"Chanel"</li>
   <li>"Burberry"</li>
-</ol>
+</uul>
